force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/JBT_RET_PROFILE_HEADER_VW__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1TbqoFF-SLuzkW3k-fdmbtynLylPQQ3kag9JfowmK9Jw/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_PROFILE_HEADER_VWs</externalName>
    <label>Student Profile Page Header (external)</label>
    <pluralLabel>Student Profile Page Header (external)</pluralLabel>
</CustomObject>