force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/fields/ACAD_PROG_DESCR__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PROG_DESCR__c</fullName>
    <description>Data sourced from PS_ASU_SPRF_CURR.ACAD_PROG_DESCR</description>
    <externalDeveloperName>ACAD_PROG_DESCR</externalDeveloperName>
    <label>Program Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>