force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/fields/COHORT__c.field-meta.xml
<CustomField>
    <fullName>COHORT__c</fullName>
    <description>Data sourced from PS_ASU_SPRF_CURR.ASU_ACAD_LVL_BOT_D</description>
    <externalDeveloperName>COHORT</externalDeveloperName>
    <label>Student Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>