force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/fields/DEGREE__c.field-meta.xml
<CustomField>
    <fullName>DEGREE__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.DEGREE</description>
    <externalDeveloperName>DEGREE</externalDeveloperName>
    <label>Degree</label>
    <length>8</length>
    <type>Text</type>
</CustomField>