force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>11</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Profile Page Header (external)</relationshipLabel>
    <relationshipName>Student_Profile_Page_Header_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>