force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <description>Data sourced from PS_ASU_SPRF_CURR.FIRST_NAME + LAST_NAME</description>
    <externalDeveloperName>NAME</externalDeveloperName>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>