force-app/main/default/objects/JBT_RET_PROFILE_HEADER_VW__x/fields/TRNSCR_DESCR__c.field-meta.xml
<CustomField>
    <fullName>TRNSCR_DESCR__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.TRNSCR_DESCR</description>
    <externalDeveloperName>TRNSCR_DESCR</externalDeveloperName>
    <label>Plan Transcript Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>